# raw

./: Cargo.toml  Makefile  README.md
data/: Cargo.toml
data/src/: lib.rs  tag.rs  type_.rs
raw/: Cargo.toml
raw/src/: main.rs
src/: main.rs
tiff_reader/: Cargo.toml
tiff_reader/src/: lib.rs
