[package]
name        = "raw"
version     = "0.0.0"
edition     = "2021"
description = "Camera raw image format processor"
license     = "GPL-3.0-only"
repository  = "https://github.com/gasrios/raw/"
readme      = "https://github.com/gasrios/raw/blob/main/README.md"
keywords    = ["camera raw", "image format", "reader"]
categories  = ["multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiff_reader = { path = "../tiff_reader" }
data        = { path = "../data" }
